fixed overflow

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -30,3 +30,7 @@
     height: 100vh; 
     padding-top:20%;
   }
+
+  #noFlow {
+      overflow: hidden;
+  }
